--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.1.1",
     "frontmatter-markdown-loader": "^3.6.3"
   }
 }
