--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  repo: main # Branch to update (optional; defaults to master)
+  branch: main # Branch to update (optional; defaults to master)
  # base_url: https://oauth-github.vercel.app/
 
 media_folder: public/img
