--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -6,20 +6,13 @@ media_folder: public/img
 
 public_folder: img
 collections:
-  - name: "pages"
-    label: "Pages"
-    files:
-    - label: "Home"
-      name: "home"
-      file: "content/home.md"
-      create: true
-      fields:
-        - { label: "Title", name: "title", widget: "string"}
-        - { label: "Publish Date", name: "date", widget: "datetime" }
-        - { label: "Body", name: "body", widget: "markdown"}
-        - label: 'Cats'
-          name: "cats"
-          widget: list
-          fields:
-            - { label: "Name", name: "name", widget: "string"}
-            - { label: "Description", name: "description", widget: "text"}
+  - name: "blog" # Used in routes, e.g., /admin/collections/blog
+    label: "BlogPost" # Used in the UI
+    folder: "content" # The path to the folder where the markdown files are stored
+    extension: json
+    format: json
+    create: true # Allow users to create new markdown files.
+    fields: # The fields for front matter. You will need to modify fields according to your project.
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Author", name: "author", widget: "string", default: "Admin"}
+      - {label: "Body", name: "body", widget: "markdown"}
